@@ -86,7 +86,7 @@
 	<key>CFBundleIconFile</key>
 	<string>PCSX.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>net.pcsx.Pcsx</string>
+	<string>com.codeplex.pcsxr</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -94,11 +94,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>PCSX 1.5 test 3</string>
+	<string>PCSX-Reloaded 1.9.0.91</string>
 	<key>CFBundleSignature</key>
 	<string>Pcsx</string>
 	<key>CFBundleVersion</key>
-	<string>1.5.0 test 3</string>
+	<string>1.9.0.91</string>
 	<key>NSMainNibFile</key>
 	<string>PCSX.nib</string>
 	<key>NSPrincipalClass</key>
